--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix --quiet",
-    "format":"prettier --write \"**/*.{ts,tsx}\"",
+    "format": "prettier --write \"**/*.{ts,tsx}\"",
     "pre-commit": "lint-staged",
     "prepare": "husky install"
-    
   },
   "lint-staged": {
     "*.{ts,tsx}": [
@@ -20,9 +19,17 @@
     ]
   },
   "dependencies": {
+    "@miblanchard/react-native-slider": "^2.1.0",
     "husky": "^8.0.1",
     "react": "18.1.0",
-    "react-native": "0.70.4"
+    "react-native": "0.70.4",
+    "react-native-circular-progress": "^1.3.7",
+    "react-native-fs": "^2.20.0",
+    "react-native-responsive-screen": "^1.4.2",
+    "react-native-slider": "^0.11.0",
+    "react-native-sound": "^0.11.2",
+    "react-native-svg": "^13.4.0",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -39,6 +46,7 @@
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "0.72.3",
+    "prettier-plugin-organize-imports": "^3.1.1",
     "react-test-renderer": "18.1.0",
     "typescript": "^4.8.3"
   },
